--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="stylesheet" href="./css/bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap.min.css">
 <link rel="stylesheet" href="style.css">
 
 
@@ -56,6 +56,6 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script  src="./js/bootsrap.min.js"></script>
+<script  src="bootsrap.min.js"></script>
 </body>
 </html>
