--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
    </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./images/IMG-20221109-WA0040.jpg" class="d-block w-100" alt="...">
+      <img src="IMG-20221109-WA0040.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption ">
         <h3 class="h3" >WELCOME</h3>
         <p class="hello">OFFICIAL WEBSITE OF </p>
@@ -105,10 +105,10 @@
 
 
 
-<img src="./images/IMG-20221109-WA0040.jpg">
-<img src="./images/IMG-20221109-WA0040.jpg">
-<img src="./images/IMG-20221109-WA0040.jpg">
-<img src="./images/IMG-20221109-WA0040.jpg">
+<img src="IMG-20221109-WA0040.jpg">
+<img src="IMG-20221109-WA0040.jpg">
+<img src="IMG-20221109-WA0040.jpg">
+<img src="IMG-20221109-WA0040.jpg">
 
 
 <script type="text/javascript" src="script.js"></script>
