--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 
 </head>
 <body>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
+
+<meta name="viewport" 
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
 
 
